# tnl-noa

./: .cproject  .gitignore  .gitlab-ci.yml  .project  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Config.py.in  Copyright  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  TODO.txt  build  buildAll  config.h  config.h.in  config.status  configDirectory.h.in  configure  configure.ac  create-config-description-parser  cuda.mk  generate-doc  install  libtnl-0.1.pc  libtnl-VERSION.pc  libtnl-dbg-0.1.pc  libtnl-mpi-0.1.pc  libtnl-mpi-dbg-0.1.pc  libtool  mcurve2gnuplot-def.h  mdiff-err-norms-def.h  mgrid-view-def.h  (+8 more)
Documentation/Examples/: CMakeLists.txt  FileExample.cpp  FileExampleCuda.cu  FileExampleSaveAndLoad.cpp  FileNameExampleDistributedSystemNodeCoordinates.cpp  ObjectExample_getType.cpp  ParameterContainerExample.cpp  ParseObjectTypeExample.cpp  StringExample.cpp  StringExampleReplace.cpp  TimerExample.cpp  TimerExampleLogger.cpp
examples/: CMakeLists.txt  CMakeLists.txt~
examples/advection/: CMakeLists.txt  LaxFridrichs.h  LaxFridrichs_impl.h  Riemann1DBoundaryConditions.h  Riemann2DBoundaryConditions.h  advection.cu  advection.h  advectionBuildConfigTag.h  advectionProblem.h  advectionProblem_impl.h  advectionRhs.h  tnl-run-advection  tnl-run-advection1  tnl-run-advectionrot1  tnlRiemann1DBoundaryConditions.h  tnlRiemann2DBoundaryConditions.h
examples/fast-sweeping/: CMakeLists.txt  MainBuildConfig.h  fastSweepingConfig.h  main.h  tnlFastSweeping.h  tnlFastSweeping2D_CUDA_impl.h  tnlFastSweeping2D_CUDA_v2_impl.h  tnlFastSweeping2D_CUDA_v3_impl.h  tnlFastSweeping2D_CUDA_v4_impl.h  tnlFastSweeping2D_CUDA_v5_impl.h  tnlFastSweeping2D_impl.h  tnlFastSweeping2D_openMP_impl.h  tnlFastSweeping3D_CUDA_impl.h  tnlFastSweeping3D_impl.h  tnlFastSweeping_CUDA.h
examples/fast-sweeping-map/: fastSweepingMapConfig.h  main.h  tnlFastSweepingMap.h  tnlFastSweepingMap2D_CUDA_v4_impl.h  tnlFastSweepingMap2D_impl.h  tnlFastSweepingMap_CUDA.h
examples/flow/: 1DBoundaryConditions.h  1DDensityBoundaryCondition.h  1DEnergyBoundaryCondition.h  1DMomentumXBoundaryCondition.h  1DMomentumYBoundaryCondition.h  CMakeLists.txt  EnergyBoundaryConditionCavity.h  LaxFridrichs.h  LaxFridrichsEnergy.h  LaxFridrichsEnergyEuler.h  LaxFridrichsMomentumX.h  LaxFridrichsMomentumY.h  LaxFridrichsMomentumZ.h  MomentumXBoundaryConditionCavity.h  RiemannProblemInitialCondition.h  navierStokes.h  navierStokesBuildConfigTag.h  navierStokesProblem.h  navierStokesProblem_impl.h
examples/flow-sw/: CMakeLists.txt  RiemannProblemInitialCondition.h  Upwind.h  UpwindContinuity.h  UpwindEnergy.h  UpwindMomentumBase.h  navierStokes.h  navierStokesProblem.h  navierStokesProblem_impl.h
examples/flow-vl/: CMakeLists.txt  DensityBoundaryConditionCavity.h  EnergyBoundaryConditionCavity.h  LaxFridrichs.h  UpwindContinuity.h  UpwindEnergy.h  UpwindMomentumBase.h  UpwindMomentumX.h  navierStokes.h  navierStokesProblem.h
examples/hamilton-jacobi/: .diff  CMakeLists.txt  CMakeLists.txt~  HamiltonJacobiProblem.h  HamiltonJacobiProblemConfig.h  HamiltonJacobiProblemSetter.h  HamiltonJacobiProblemSetter_impl.h  HamiltonJacobiProblem_impl.h  hamiltonJacobiProblemConfig.h  hamiltonJacobiProblemSetter.h  hamiltonJacobiProblemSetter_impl.h  hamiltonJacobiProblemSolver.h  hamiltonJacobiProblemSolver_impl.h  hamiltonJacobiSolver.cfg.desc  main.cpp  tnl-direct-eikonal-solver.h  tnl-run-eikonal-equation-eoc-test  tnlDirectEikonalMethodsBase.h  tnlDirectEikonalMethodsBase_impl.h  tnlDirectEikonalProblem.h  tnlDirectEikonalProblem_impl.h  tnlFastSweepingMethod.h  tnlFastSweepingMethod1D_impl.h  tnlFastSweepingMethod2D_impl.h  tnlFastSweepingMethod3D_impl.h
examples/hamilton-jacobi-parallel/: CMakeLists.txt  MainBuildConfig.h  Makefile  Makefile~  main.cpp  main.h  parallelEikonalConfig.h  tnlParallelEikonalSolver.h  tnlParallelEikonalSolver2D_impl.h  tnlParallelEikonalSolver3D_impl.h  tnlParallelEikonalSolver_impl.h
examples/hamilton-jacobi-parallel-map/: CMakeLists.txt  main.h  parallelMapConfig.h  run~  tnlParallelMapSolver.h  tnlParallelMapSolver2D_impl.h
examples/heat-equation/: CMakeLists.txt  EOCtest  EOCtest-adaptivity-cycle  HeatEquationBuildConfigTag.h  Makefile  TOHLEPUST  debugging_parameters  heat-equation-conf.h  heat-equation.cfg.desc  heatEquationConfig.h  heatEquationEocSolver.h  heatEquationEocSolver_impl.h  heatEquationScheme.h  heatEquationScheme_impl.h  heatEquationSetter.h  heatEquationSetter_impl.h  heatEquationSolver.h  heatEquationSolver_impl.h  main.cpp  run-heat-equation  run-heat-equation-testy-konvergence  run-heat-equation-testy-laplace-konvergence  run-init-mesh  simple-solver.cfg.desc  tnl-heat-equation-eoc.cpp  tnl-heat-equation-eoc.cu  tnl-heat-equation-eoc.h  tnl-heat-equation.cpp  tnl-heat-equation.cu  tnl-heat-equation.h  tnl-run-heat-equation  tnl-run-heat-equation-eoc-test  tnlAnalyticSolution.h  tnlAnalyticSolution_impl.h  tnlDirichletBoundaryConditions.h  tnlDirichletBoundaryConditions_impl.h  tnlHeatEquationEocRhs.h  (+10 more)
src/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  tnl-benchmarks.cpp  tnl-benchmarks.h  tnl-unit-tests.cpp  tnl-unit-tests.cu  tnlObject.cpp  tnlObject.h
tests/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  convert-matrices  cuda-profiler.conf  cusp-test.cu  cusp-test.h  draw-matrices  florida-matrix-market  get-matrices  matrix-formats-test.cfg.desc  matrix-formats-test.cpp  matrix-formats-test.h  matrix-market  matrix-solvers-benchmark.cpp  matrix-solvers-benchmark.h  run-matrix-formats-test  run-matrix-solvers-benchmark  run-sparse-matrix-benchmark  sparse-matrix-benchmark.cfg.desc  sparse-matrix-benchmark.cpp  sparse-matrix-benchmark.cu  sparse-matrix-benchmark.h  tnl-benchmarks.cpp  tnl-benchmarks.h  tnl-sparse-matrix-check.cfg.desc  tnl-sparse-matrix-test  tnlSpmvBenchmark.h  tnlSpmvBenchmarkAdaptiveRgCSRMatrix.h  tnlSpmvBenchmarkCSRMatrix.h  tnlSpmvBenchmarkHybridMatrix.h  tnlSpmvBenchmarkRgCSRMatrix.h
tools/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  tnl-compile.in  tnl-link.in
(+5830 files in other folders)
